--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,15 @@
   padding: 0 32px;
 }
 
+.main-container{
+  display: flex;
+  padding-right: 32px;
+}
+
+.shopping-cart{
+  width: 25vw;
+}
+
 @media (max-width: 640px){
   .product-container{
     flex-direction: column;
